Added test file that demonstrates reading cryopods
(cherry picked from commit 40133431c45b01f5710f14c79cb0b27b4a4df433)